# localstorage-rs

./: .env-example  Cargo.toml  README.md
src/: storage.rs
